<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/generic_settings_header">

        <EditTextPreference
            app:key="api_key"
            app:title="@string/api_key_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ai_img_settings_header">
        <EditTextPreference
            android:defaultValue="7"
            android:key="cfg_scale_pref"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/cfg_scale_pref_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="NONE"
            android:entries="@array/clip_guidance_item_list"
            android:entryValues="@array/clip_guidance_item_list"
            android:key="clip_guidance_preset_pref"
            android:title="@string/clip_guidance_preset_pref_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:defaultValue="AUTO"
            android:entries="@array/sampler_item_list"
            android:entryValues="@array/sampler_item_list"
            android:key="sampler_pref"
            android:title="@string/sampler_pref_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="1"
            android:key="no_of_samples_pref"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/no_of_samples_pref_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="0"
            android:key="seed_pref"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/seed_pref_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="30"
            android:key="steps_pref"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/steps_pref_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:entries="@array/style_preset_item_list"
            android:entryValues="@array/style_preset_item_list"
            android:key="style_preset_pref"
            android:title="@string/style_preset_pref_title"
            app:defaultValue="auto"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>